# algos-hs

./: README.md  algos-hs.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-8.22/8.0.2/flag-cache/: FPretty-1.1-KAH1p2rCgcPKwCKmtgHE3o  algos-hs-0.1.0.0-8DDO7Kzo9kR4RFatZrT0be  cpphs-1.20.8-87uHpRVbMaP4k1m97GGc18  data-ordlist-0.4.7.0-D6ij7F9rr5a9kcQtGict4V  happy-1.19.5  haskell-src-exts-1.18.2-KO4U0grjP4DH7e5BXSTA8t  hood-0.3-39URCBOi8379cMiPlrFI5f  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  old-locale-1.0.0.7-KGBP1BSKxH5GCm0LnZP04j  old-time-1.1.0.3-KWRsMSdY26c2L27Y9n9cyq  parallel-3.2.1.1-KQJHWCcq2Ka569Stb10nhx  pointfree-1.1.1.3-4AWROPbgB8RDWVWsfc9bTA  polyparse-1.12-Ee2dhxWFCj0JUfsZIQidEE  text-1.2.2.1-Ji7hMs2U4BkBwavd4taEVR
.stack-work/install/x86_64-osx/lts-8.22/8.0.2/lib/x86_64-osx-ghc-8.0.2/: libHSFPretty-1.1-KAH1p2rCgcPKwCKmtgHE3o-ghc8.0.2.dylib  libHSalgos-hs-0.1.0.0-4Sko5DL6jdz40iPla4bF54-ghc8.0.2.dylib  libHSalgos-hs-0.1.0.0-8t08XiJuizj41xgenO3a7P-ghc8.0.2.dylib  libHShood-0.3-39URCBOi8379cMiPlrFI5f-ghc8.0.2.dylib  libHSpointfree-1.1.1.3-4AWROPbgB8RDWVWsfc9bTA-ghc8.0.2.dylib
.stack-work/install/x86_64-osx/lts-8.22/8.0.2/pkgdb/: FPretty-1.1-KAH1p2rCgcPKwCKmtgHE3o.conf  algos-hs-0.1.0.0-4Sko5DL6jdz40iPla4bF54.conf  algos-hs-0.1.0.0-8t08XiJuizj41xgenO3a7P.conf  hood-0.3-39URCBOi8379cMiPlrFI5f.conf  package.cache  pointfree-1.1.1.3-4AWROPbgB8RDWVWsfc9bTA.conf
app/: Main.hs  Main2.hs
src/: Search.hs
src/Sort/: InsertSort.hs  InsertionSort.hs  MergeSort.hs  ParallelQuickSort.hs  QuickSort.hs  SelectionSort.hs
(+51 files in other folders)
