name:                algos-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Tatsuki-I/algos-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Tatsuki-I
maintainer:          tatsuki.devel@gmail.com
copyright:           2017 Tatsuki-I
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sort.QuickSort
                     , Sort.InsertionSort
                     , Sort.SelectionSort
                     , Sort.MergeSort
                     , Sort.ParallelQuickSort
                     , Search
  build-depends:       base >= 4.7 && < 5
                     , parallel
                     , hood
  default-language:    Haskell2010

executable algos
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , algos-hs
  default-language:    Haskell2010

test-suite algos-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , algos-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Tatsuki-I/algos-hs
